@@ -2,24 +2,24 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: NXMC Dashboard
 Bundle-SymbolicName: org.netxms.ui.eclipse.dashboard;singleton:=true
-Bundle-Version: 2.0.7
+Bundle-Version: 2.0.8
 Bundle-Activator: org.netxms.ui.eclipse.dashboard.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.ui;bundle-version="3.8.2",
  org.eclipse.core.runtime;bundle-version="3.8.0",
  org.eclipse.core.expressions;bundle-version="3.4.400",
- org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.6",
- org.netxms.ui.eclipse.console;bundle-version="2.0.5",
- org.netxms.ui.eclipse.charts;bundle-version="2.0.3",
- org.swtchart;bundle-version="0.7.9",
- org.netxms.ui.eclipse.networkmaps;bundle-version="2.0.4",
- org.netxms.ui.eclipse.osm;bundle-version="2.0.0",
- org.netxms.ui.eclipse.datacollection;bundle-version="2.0.0",
- org.netxms.ui.eclipse.alarmviewer;bundle-version="2.0.0",
- org.netxms.ui.eclipse.filemanager;bundle-version="2.0.5",
- org.netxms.ui.eclipse.objectbrowser;bundle-version="2.0.3",
- org.netxms.ui.eclipse.perfview;bundle-version="2.0.5",
- org.netxms.ui.eclipse.objectview;bundle-version="2.0.5"
+ org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.10",
+ org.netxms.ui.eclipse.console;bundle-version="2.0.10",
+ org.netxms.ui.eclipse.charts;bundle-version="2.0.5",
+ org.swtchart;bundle-version="0.7.15",
+ org.netxms.ui.eclipse.networkmaps;bundle-version="2.0.8",
+ org.netxms.ui.eclipse.osm;bundle-version="2.0.8",
+ org.netxms.ui.eclipse.datacollection;bundle-version="2.0.7",
+ org.netxms.ui.eclipse.alarmviewer;bundle-version="2.0.7",
+ org.netxms.ui.eclipse.filemanager;bundle-version="2.0.6",
+ org.netxms.ui.eclipse.objectbrowser;bundle-version="2.0.7",
+ org.netxms.ui.eclipse.perfview;bundle-version="2.0.7",
+ org.netxms.ui.eclipse.objectview;bundle-version="2.0.7"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
 Export-Package: org.netxms.ui.eclipse.dashboard.api,
