@@ -2,14 +2,14 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: Performance View Plug-in for NXMC
 Bundle-SymbolicName: org.netxms.ui.eclipse.perfview;singleton:=true
-Bundle-Version: 2.0.6
+Bundle-Version: 2.0.7
 Bundle-Activator: org.netxms.ui.eclipse.perfview.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.ui;bundle-version="3.8.2",
  org.eclipse.core.runtime;bundle-version="3.8.0",
- org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.6",
- org.netxms.ui.eclipse.console;bundle-version="2.0.5",
- org.netxms.ui.eclipse.charts;bundle-version="2.0.4",
+ org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.10",
+ org.netxms.ui.eclipse.console;bundle-version="2.0.10",
+ org.netxms.ui.eclipse.charts;bundle-version="2.0.5",
  org.netxms.ui.eclipse.objectview;bundle-version="2.0.3",
  org.netxms.ui.eclipse.datacollection;bundle-version="2.0.4",
  org.netxms.ui.eclipse.usermanager;bundle-version="2.0.4"
