@@ -331,7 +331,7 @@ public class HistoricalGraphView extends ViewPart implements GraphSettingsChange
          int color = dci.getColorAsInt();
          if (color == -1)
             color = ChartColor.getDefaultColor(index).getRGB();
-         styles.add(new GraphItemStyle(dci.area ? GraphItemStyle.AREA : GraphItemStyle.LINE, color, 2, 0));
+         styles.add(new GraphItemStyle(dci.area ? GraphItemStyle.AREA : GraphItemStyle.LINE, color, 2, dci.invertValues ? GraphItemStyle.INVERTED : 0));
          index++;
       }
       chart.setItemStyles(styles);
@@ -423,8 +423,6 @@ public class HistoricalGraphView extends ViewPart implements GraphSettingsChange
                         currentItem.column, config.getTimeFrom(), config.getTimeTo(), 0);
                   thresholds[i] = null;
                }
-               if (currentItem.invertValues)
-                  data[i].invert();
                monitor.worked(1);
             }
 
